Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17533

LSOM does not work DIO

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      Because DIO writes do not update the inode size during the write, when a file is closed and the LSOM update is sent, the file size provided by the client is incorrect.

      DIO writes don't cause consistency problems because ls and other things which check the file size will get the correct size and update the inode size then, but they should still update the inode size.

      This is best done by calling ll_merge_attr on all writes at the end of the write, rather than just for async writes in vvp_io_write_commit.

      Attachments

        Activity

          People

            paf0186 Patrick Farrell
            paf0186 Patrick Farrell
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: