lustre/llite/vvp_io.c
@@ -1263,9 +1263,6 @@ int vvp_io_write_commit(const struct lu_env *env, struct cl_io *io)
 		lli->lli_async_rc = 0;
 	}
 
-	/* update inode size */
-	ll_merge_attr(env, inode);
-
 	/* Now the pages in queue were failed to commit, discard them
 	 * unless they were dirtied before.
 	 */
